--- a/cpp/main/CMakeLists.txt
+++ b/cpp/main/CMakeLists.txt
@@ -14,6 +14,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Widgets LinguistTools REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Widgets LinguistTools REQUIRED)
 
+set(QSCINTILLA ../qscintilla)
+include_directories(${QSCINTILLA}/include)
+link_directories(${QSCINTILLA})
+
 file(GLOB_RECURSE TS_FILES ./ts/*.xml)
 file(GLOB_RECURSE CPP_FILES ./src/*.cpp ./src/*.h ./src/*.ui)
 
@@ -30,7 +34,7 @@ else()
     qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
 endif()
 
-target_link_libraries(main PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
+target_link_libraries(main PRIVATE Qt${QT_VERSION_MAJOR}::Widgets qscintilla2_qt6)
 
 set_target_properties(main PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER chushi0-graduation_project-main.github.com
